// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test inventory logic be Case 1: Check load inventories 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "1",
    "name": "Fish",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "2",
    "name": "Meat",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "3",
    "name": "Pork",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "4",
    "name": "Apple",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "5",
    "name": "Banana",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "6",
    "name": "Vodka",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "available": true,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "available": true,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "available": true,
    "name": "Drink",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "1",
      "name": "Fish",
    },
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "2",
      "name": "Meat",
    },
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "3",
      "name": "Pork",
    },
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "4",
      "name": "Apple",
    },
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "5",
      "name": "Banana",
    },
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "6",
      "name": "Vodka",
    },
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 2: Update inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 10,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-05T00:00:00.000Z",
        "inventory": "ObjectID",
        "reason": "Update stock",
        "type": "remove",
      },
      Object {
        "_id": "ObjectID",
        "amount": 30,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 30,
    "appType": "POS_RESTAURANT",
    "id": "1",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "productId": "ObjectID",
    "remove": 10,
    "stock": 20,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 50,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 50,
    "appType": "POS_RESTAURANT",
    "id": "2",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 60.22,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 60,
    "appType": "POS_RESTAURANT",
    "id": "3",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 100,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 100,
    "appType": "POS_RESTAURANT",
    "id": "4",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 10,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 10,
    "appType": "POS_RESTAURANT",
    "id": "5",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 5.5,
        "appType": "POS_RESTAURANT",
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 5,
    "appType": "POS_RESTAURANT",
    "id": "6",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3: Create inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "7",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "productId": "ObjectID",
    "stock": 20,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3: Create inventory 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "1",
      "name": "Fish",
    },
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "2",
      "name": "Meat",
    },
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "3",
      "name": "Pork",
    },
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "4",
      "name": "Apple",
    },
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "5",
      "name": "Banana",
    },
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "6",
      "name": "Vodka",
    },
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "7",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "7",
      "name": "Whiskey",
    },
    "productId": "ObjectID",
    "stock": 20,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3a: Create inventory with duplicate id 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 4: Delete inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 4: Delete inventory 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "2",
    "name": "Meat",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "4",
    "name": "Apple",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "5",
    "name": "Banana",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "6",
    "name": "Vodka",
  },
]
`;

exports[`Test inventory logic be Case 5: Create inventory with product 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "7",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "productId": "ObjectID",
    "stock": 20,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 5: Create inventory with product 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "1",
    "name": "Fish",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "2",
    "name": "Meat",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "3",
    "name": "Pork",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "4",
    "name": "Apple",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "5",
    "name": "Banana",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "6",
    "name": "Vodka",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "7",
    "name": "Whiskey",
  },
]
`;

exports[`Test inventory logic be Case 5a: Create inventory with product 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "1",
      "name": "Fish",
    },
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "2",
      "name": "Meat",
    },
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "3",
      "name": "Pork",
    },
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "4",
      "name": "Apple",
    },
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "5",
      "name": "Banana",
    },
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "appType": "POS_RESTAURANT",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "appType": "POS_RESTAURANT",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "6",
      "name": "Vodka",
    },
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 5a: Create inventory with product 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      Object {
        "_id": "ObjectID",
        "appType": "POS_RESTAURANT",
        "available": true,
        "name": "Food",
      },
    ],
    "id": "1",
    "name": "Test item",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "2",
    "name": "Meat",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "3",
    "name": "Pork",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "4",
    "name": "Apple",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "5",
    "name": "Banana",
  },
  Object {
    "_id": "ObjectID",
    "appType": "POS_RESTAURANT",
    "category": Array [
      "ObjectID",
    ],
    "id": "6",
    "name": "Vodka",
  },
]
`;
